@@ -8,6 +8,10 @@
  - compact-file-stats mode: print progress when scanning reads files. Use a buffered reader to improve read file
    parsing performance.
  - discover-sequence-variants: remove left-over filter for somatic variations output format.
+ - discover-sequence-variants: Add a new filter to remove indels at a site where a sample shows lots of distinct
+   possible indels. Indels at these sites are very likely to be artefactual. We count the number of samples where
+   three distinct indel genotypes are seen. If more than 1/4 of the samples have likely indel artifacts, we remove
+   all indel candidates at the site. This filter is added to the somatic variations output format.
 2.2
  - Remove threshold effects when calling genotypes in several samples. Modified the filters to not remove bases in
    specific samples when the genotype survived filters in at least another sample (previous versions reported these
